--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/webp"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "DALL·E 2024-12-28 23.03.48 - A sleek and minimalist icon for a random name generator application. The design should feature a modern look with a stylized text box or form and a hi.webp",
       "sizes": "512x512",
       "type": "image/webp"
     }
